fix z-index isxue

--- a/src/app/modal/incubateur/collect-egg/collect-egg.component.scss
+++ b/src/app/modal/incubateur/collect-egg/collect-egg.component.scss
@@ -11,6 +11,7 @@
     flex-direction: row;
     align-items: center;
     padding: 0px 5px;
+    z-index: 5;
 }
 
 .x {
@@ -21,7 +22,6 @@ img {
     width: 100%;
     height: 260px;
     transform: scale(1.5);
-    z-index: -2;
 }
 
 .centered {
@@ -75,6 +75,7 @@ form {
     display: flex;
     flex-direction: column;
     margin-top: 4px;
+    z-index: 5;
 }
 
 .no-margin {
