--- a/src/app/modal/incubateur/egg-incubation/egg-incubation.component.scss
+++ b/src/app/modal/incubateur/egg-incubation/egg-incubation.component.scss
@@ -11,6 +11,7 @@
     flex-direction: row;
     align-items: center;
     padding: 0px 5px;
+    z-index: 5;
 }
 
 .x {
